tests/fixtures/positive/style/SerialVersionUIDInSerializableClass.kt
package fixtures.positive.style

import java.io.Serializable

class Foo : Serializable {
    fun doSomething() {
        println("doing something")
    }
}
